fix error conflict "white-space: nowrap" in recently view panel

--- a/src/main/resources/jira/dialogs.css
+++ b/src/main/resources/jira/dialogs.css
@@ -52,7 +52,7 @@
 .jiraSearchResults.data-table td{
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
     word-wrap: break-word;
     vertical-align: top;
     padding-right: 1%;
